<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">彩虹都市</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginname">手机号</string>
    <string name="password">输入登录密码</string>
    <string name="passwordval">密  码</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="findpwd">找回密码</string>
    <string name="register">注册</string>
    <string name="register_imme">立即注册</string>
    <string name="find_confirm">确定</string>
    <string name="registerphone">注册手机号</string>
    <string name="find_input_phone">请输入手机号</string>
    <string name="register_input_password">请输入密码</string>
    <string name="find_input_password">请输入新的密码</string>
    <string name="register_input_checkcode">请输入验证码</string>
    <string name="please_input_again">请再次输入</string>
    <string name="find_confirm_again">确认密码</string>
    <string name="back">返回</string>
    <string name="register_agreement">注册即表示您已同意</string>
    <string name="servicerule">服务条款</string>
    <string name="private_agreement">亿诚汇付绝对不会以任何形式泄露您的个人信息</string>
    <string name="companyname">亿诚汇付</string>
    <string name="confirmswipe">确认收款</string>
    <string name="consume">消费</string>
    <string name="consumetradetime">交易时间：</string>
    <string name="trademoney">交易金额(元)</string>
    <string name="money">金　　额</string>
    <string name="passwordnullval">密　　码</string>
    <string name="cardbank">　发卡行</string>
    <string name="cardnumber">　　卡号</string>
    <string name="tradecardnumber">交易卡号：</string>
    <string name="tradenumber">交易编号：</string>
    <string name="trade_type">交易类型：</string>
    <string name="trade_rate">交易费率：</string>
    <string name="tixian_satus">提现状态</string>
    <string name="tradestatus">交易状态：</string>
    <string name="signnameimage">持卡人签字:</string>
    <string name="shouquanma">授权码：</string>
    <string name="pleaseinputcustomermobile">输入手机号码发送收据</string>
    <string name="send">发送</string>
    <string name="inputpassword">输入密码</string>
    <string name="inputloginpassword">输入登录密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="confirmpay">确认付款</string>
    <string name="cancelpay">取消付款</string>
    <string name="failurereason">失败原因</string>
    <string name="signname">签名</string>
    <string name="customername">商户名称</string>
    <string name="rewrite">重写</string>
    <string name="confirmtrade">本人确认以上</string>
    <string name="trade">交易</string>
    <string name="agreementtrade">,同意将其记入本人账户</string>
    <string name="swipewait">检测刷卡器</string>
    <string name="swipeprompt_one">1.芯片卡请进行插卡操作</string>
    <string name="swipeprompt_two">2.磁条面向自己紧贴卡槽底部匀速刷过</string>
    <string name="registersuccess">注册成功</string>
    <string name="tradetimeout">交易超时，请重试</string>
    <string name="tobalance">申请结算</string>
    <string name="querybalance">余额查询</string>
    <string name="first">首页</string>
    <string name="certificate_photo">证件照</string>
    <string name="bankcard_photo">银行卡照</string>
    <string name="trade_photo">交易凭证照</string>
    <string name="idcard">身份证</string>
    <string name="tradebank">交易银行</string>
    <string name="tradecertificate">交易凭证</string>
    <string name="front">正面</string>
    <string name="reverseside">反面</string>
    <string name="query">查询</string>
    <string name="tixian">提现</string>
    <string name="setting">设置</string>
    <string name="setmachine">设置刷卡器</string>
    <string name="modifypwd">修改密码</string>
    <string name="callservice">联系客服</string>
    <string name="share">分享</string>
    <string name="suggestion">意见反馈</string>
    <string name="version">版本信息</string>
    <string name="setting_terminal">终端设置</string>
    <string name="login_phone_isnull">手机号不能为空</string>
    <string name="login_pwd_isnull">密码不能为空</string>
    <string name="login_pwd_iserror">密码错误</string>
    <string name="reponse_content_isnull">返回结果为空</string>
    <string name="login_failure">登录失败</string>
    <string name="money_is_null">金额不能为空</string>
    <string name="wifidisable">WIFI网络不可用！</string>
    <string name="nonetwork">没有可用的网络！</string>
    <string name="autoquery">立即查询</string>
    <string name="queryfailure">查询失败</string>
    <string name="accountbalance">账户余额</string>
    <string name="tradedetail">交易详情</string>
    <string name="checkstatus">审核状态</string>
    <string name="improveconfirm">提额审核已提交\n请您耐心等待审核</string>
    <string name="balancestatus">结算状态</string>
    <string name="canceltrade">撤销交易</string>
    <string name="交易提现"></string>
    <string name="tradecancel">交易撤销</string>
    <string name="traderesult">交易结果</string>
    <string name="server_error">网络连接异常，请重试</string>
    <string name="server_time_out">哎呀！网络连接超时了,再给一次机会吧</string>
    <string name="loading_wait">请稍等...</string>
    <string name="service_number">400-869-9661</string>//彩虹都市客服电话
    <!-- 键盘数字 -->

    <string name="one_num">1</string>
    <string name="two_num">2</string>
    <string name="three_num">3</string>
    <string name="four_num">4</string>
    <string name="five_num">5</string>
    <string name="six_num">6</string>
    <string name="seven_num">7</string>
    <string name="eight_num">8</string>
    <string name="nine_num">9</string>
    <string name="zero_num">0</string>
    <string name="point">.</string>
    <string name="defaultnum">0.00</string>
    <string name="csign">C</string>
    <string name="clear">清除</string>
    <string name="twozero">00</string>
    <string name="defaultnumall"></string>
    <string name="title_activity_select_terminal">SelectTerminalActivity</string>
    <string name="title_activity_bluetooth_select_activity_">BluetoothSelectActivity_</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="title_activity_swipe_wait_bluetooth">SwipeWaitBluetoothActivity</string>
    <string name="next_step">下一步</string>
    <string name="next_page">下一页</string>
    <string name="title_activity_customer_pic_info">CustomerPicInfoActivity</string>
    <string name="photo_tishi01">手持身份证,手指不能遮挡身份证上任何信息</string>
    <string name="photo_tishi02">身份证图像清楚,每一个字都要清晰可辨,利于识别</string>
    <string name="photo_tishi03">认证照片不是艺术照,不要过度化妆,这张照片需要本人面部五官与身份证照片进行对比</string>
    <string name="photo_tishi04">五官包括耳朵,如果有耳朵,不要让头发遮挡住</string>
    <string name="photo_tishi05">拍照时需要拍出持证手臂,以证实是本人手持</string>
    <string name="photo_tishi06">对正拍摄,不要有奇异角度,不要闪光灯拍摄,自然拍摄就可以</string>
    <string name="click_upload">点击上传</string>
    <string name="click_select">点击选图</string>
    <string name="upload_sucess">上传成功</string>
    <string name="click_select_again">重新选择</string>
    <string name="already_exsit">图片已上传</string>
    <string name="submit_pic">提  交</string>
    <string name="submit_success">提交成功</string>
    <string name="title_activity_swipe_wait_mo_fang">SwipeWaitMoFangActivity</string>
    <string name="title_activity_swipe_wait_zhong_ci">SwipeWaitZhongCiActivity</string>

    <string name="title_activity_find_pwd">FindPwdActivity</string>
    <string name="title_activity_launch">LaunchActivity</string>

    <string name="title_activity_real_time">RealTimeActivity</string>
    <string name="real_time_left_hint">可提现交易满足条件：\n1:可提现交易满足条件\n2:可提现交易满足条件\n3:可提现交易满足条件</string>
    <string name="real_time_right_hint">提现剩余额度：\n1:可提现交易满足条件\n2:可提现交易满足条件\n3:可提现交易满足条件</string>
    <string name="improve_tip">1》请填写真实的银行卡信息\n2》请上传真实清晰的身份证和银行卡照片，以便顺利快速提高额度\n3》申请提额的银行卡信息必须签写清晰的持卡人签字
        \n4》填写的银行卡信息，银行卡照片，身份证照片必须一致</string>
    <string name="title_activity_swipe_wait_yi_feng_blue">SwipeWaitYiFengBlueActivity</string>
    <string name="title_activity_swipe_wait_xin_nuo_blue">SwipeWaitXinNuoBlueActivity</string>
    <string name="title_activity_bbpose_bule">BBPoseBuleActivity</string>
    <string name="title_activity_swipe_wait_bbpos">SwipeWaitBBPOSActivity</string>
    <string name="title_activity_xin_lian_da">XinLianDaActivity</string>
    <string name="title_activity_creditrepay">CreditrepayActivity</string>
    <string name="title_activity_bind_card_list">BindCardList</string>


</resources>
