<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical" >
    <include layout="@layout/title"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:orientation="vertical"
        >
        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="23dip"
        android:paddingTop="23dip"
        android:orientation="vertical"
        >
        
       <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idcard"
            android:textSize="16sp"
            />
    	</LinearLayout>
    	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="101dip"
        android:gravity="center_vertical"
        android:paddingLeft="20dip"
        android:background="@drawable/border"
        >
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certificate_photo"
            android:textSize="18sp"
            />
    	</LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right|center_vertical"
	        android:gravity="right|center_vertical"
	        >
	       <LinearLayout 
            android:layout_width="90dip"
	        android:layout_height="90dip"
	        android:background="@drawable/border_dash"
	        android:orientation="vertical"
	        android:gravity="center"
            >
            
        	<ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/add"
	            />
        	<TextView 
        	    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/front"
        	    />
        	</LinearLayout>
        	<LinearLayout 
            android:layout_width="90dip"
	        android:layout_height="90dip"
	        android:background="@drawable/border_dash"
	        android:orientation="vertical"
	        android:layout_margin="5dip"
	        android:gravity="center"
            >
            
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/add"
	            />
	        <TextView 
        	    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/reverseside"
        	    />
	        </LinearLayout>
	        
	    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="23dip"
        android:orientation="vertical">
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tradebank"
            android:textSize="16sp"
            />
    	</LinearLayout>
    	
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="101dip"
        android:gravity="center_vertical"
        android:paddingLeft="20dip"
        android:background="@drawable/border"
        >
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankcard_photo"
            android:textSize="18sp"
            />
    	</LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right|center_vertical"
	        android:gravity="right|center_vertical"
	        >
        	<LinearLayout 
            android:layout_width="90dip"
	        android:layout_height="90dip"
	        android:background="@drawable/border_dash"
	        android:orientation="vertical"
	        android:gravity="center"
            >
            
        	<ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/add"
	            />
        	<TextView 
        	    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/front"
        	    />
        	</LinearLayout>
        	<LinearLayout 
            android:layout_width="90dip"
	        android:layout_height="90dip"
	        android:background="@drawable/border_dash"
	        android:orientation="vertical"
	        android:layout_margin="5dip"
	        android:gravity="center"
            >
            
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/add"
	            />
	        <TextView 
        	    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/reverseside"
        	    />
	        </LinearLayout>
	        
	        
	    </LinearLayout>
        
        
    </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="23dip"
        android:orientation="vertical"
        >
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tradecertificate"
            android:textSize="16sp"
            />
    	</LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="101dip"
        android:gravity="center_vertical"
        android:paddingLeft="20dip"
        android:background="@drawable/border"
        >
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_photo"
            android:textSize="18sp"
            />
        
    	</LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right|center_vertical"
	        android:gravity="right|center_vertical"
	        >
       
	        <LinearLayout 
            android:layout_width="90dip"
	        android:layout_height="90dip"
	        android:background="@drawable/border_dash"
	        android:orientation="vertical"
	        android:layout_margin="5dip"
	        android:gravity="center"
            >
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/add"
	            />
	        <TextView 
        	    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/reverseside"
        	    />
	        </LinearLayout>
	        
	    </LinearLayout>
        
        
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    
    

</LinearLayout>
